src/z80asm/z80asm2/t/30-directive/expected/include_03.txt
% z88dk-z80asm -v -dump-after-directives t/30-directive//input/include_03.asm
Assembling t/30-directive/input/include_03.asm...
t/30-directive/input/include_03.asm:1:30: error: Unexpected token after directive: extra
    include "file_not_found.inc" extra
                                 ^
t/30-directive/input/include_03.asm:1:9: error: File not found: file_not_found.inc
    include "file_not_found.inc" extra
            ^
